# CRM

./: README.md
LaunchPage/: index.html
backend/: .env  README.md  channel_service.py  database.py  main.py  models.py  pyproject.toml  schemas.py  scripts.py  seed.py  test_api.py  xeno.db
backend/routers/: ai.py  campaigns.py  customers.py  dashboard.py  inbox.py  products.py  projects.py  receipts.py  segments.py
backend/services/: campaign_sender.py  gemini.py  segment_engine.py
front end/: README.md  app.html  index.html  package-lock.json  package.json  refine.js  rewrite.js  server.ts  vercel.json  vite.config.ts
front end/public/: llms.txt  robots.txt  sitemap.xml
front end/src/: App.tsx  index.css
front end/src/app/ai/: page.tsx
front end/src/app/auth/: page.tsx
front end/src/app/campaigns/: page.tsx  stats.tsx
front end/src/app/campaigns/new/: page.tsx
front end/src/app/customers/: page.tsx
front end/src/app/dashboard/: page.tsx
front end/src/app/inbox/: page.tsx
front end/src/app/products/: page.tsx
front end/src/app/projects/: page.tsx
front end/src/app/segments/: builder.tsx  page.tsx
front end/src/components/layout/: PageHeader.tsx  Sidebar.tsx  Topbar.tsx
front end/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx
front end/src/lib/: api.ts  auth.tsx  mockData.ts  toast.ts  utils.ts
front end/src/types/: index.ts
